--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,12 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v1.0.2
+      with:
+        token: 4da2008e-f389-47aa-99da-1431eccba579
+        file: ./coverage.txt
+        flags: unittests
+        name: codecov-gox
