OpenLoadPkgsCached: persist cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+go.json
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+*.cache
 
 # Test binary, built with `go test -c`
 *.test
