--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,10 +24,5 @@ jobs:
     - name: Test
       run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
 
-    - name: Upload coverage report
-      uses: codecov/codecov-action@v1.0.2
-      with:
-        token: 4da2008e-f389-47aa-99da-1431eccba579
-        file: ./coverage.txt
-        flags: unittests
-        name: codecov-gox
+    - name: Codecov
+      uses: codecov/codecov-action@v2
