ci: gcov_ignore

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,4 +30,5 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v5
       with:
+        gcov_ignore: internal/*,chore/*,tutorial/*,token/*
         token: ${{ secrets.CODECOV_TOKEN }}
