--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v -coverprofile="coverage.txt" -covermode=atomic ./...
+      run: go test -race -v -coverprofile="coverage.txt" -covermode=atomic ./...
 
     - name: Codecov
       uses: codecov/codecov-action@v5
@@ -55,7 +55,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v -coverprofile="coverage.txt" -covermode=atomic ./...
+      run: go test -race -v -coverprofile="coverage.txt" -covermode=atomic ./...
 
     - name: Codecov
       uses: codecov/codecov-action@v5
