--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
   Test:
     strategy:
       matrix:
-        go-version: [1.19.x, 1.21.x, 1.22.x, 1.23.x]
+        go-version: [1.23.x, 1.24.x, 1.25.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
